force-app/main/default/objects/PORTAL_UCIN_Email_Template__mdt.object
<CustomObject>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <label>EmailTemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddressId__c</fullName>
        <label>OrgWideEmailAddressId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddress__c</fullName>
        <description>Email corresponding to org wide email address. Code will OrgWideEmailAddress based on this.</description>
        <label>OrgWideEmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PORTAL UCIN Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>EmailTemplateId__c</columns>
        <columns>OrgWideEmailAddressId__c</columns>
        <columns>OrgWideEmailAddress__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>PORTAL UCIN Email Templates</pluralLabel>
</CustomObject>